# mas-apigateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  db.txt  k8s-test-crd.yaml  k8s-test.yaml  new.txt  redis.txt  secure  server.crt  server_pkcs8.key
.specify/memory/: constitution.md
control-plane/: Dockerfile  codegen.sh  config-docker.yaml  config.yaml  go.mod
control-plane/cmd/server/: main.go
control-plane/internal/server/: grpc.go
control-plane/pkg/config/: dsl.go  loader.go  watcher.go
control-plane/pkg/k8s/: client.go  controller.go  registry.go  secret_controller.go
data-plane/: Cargo.toml  Dockerfile  build.rs
data-plane/src/: client.rs  main.rs  wasm.rs
data-plane/src/plugins/: host_functions.rs
data-plane/wit/: agw.wit
deploy/: README.md  configmap.yaml  deployment.yaml
deploy/docker/: docker-compose.yaml
deploy/kubernetes/: configmap.yaml  crd.yaml  ebpf-agent.yaml  k8s-deps.yaml  k8s-test-crd.yaml  k8s-tls-secret.yaml  rbac.yaml  upstream.yaml
docs/: ARCHITECTURE.md  VERIFICATION.md
ebpf-agent/: Cargo.toml  Dockerfile
ebpf-agent/agent/: Cargo.toml
ebpf-agent/agent/src/: main.rs
ebpf-agent/common/: Cargo.toml
ebpf-agent/common/src/: lib.rs
ebpf-agent/ebpf/: Cargo.toml
ebpf-agent/ebpf/src/: main.rs
plugins/: README.md
plugins/db-demo/: Cargo.toml
plugins/db-demo/src/: lib.rs
plugins/deny-all/: Cargo.toml
plugins/deny-all/src/: lib.rs
plugins/redis-demo/: Cargo.toml
plugins/redis-demo/src/: lib.rs
proto/: agw.proto  config.proto
specs/: ROADMAP.md
specs/001-agw-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agw-core/checklists/: requirements.md
specs/002-dynamic-config/: spec.md
specs/003-k8s-discovery/: spec.md
specs/004-wasm-plugins/: spec.md
specs/005-crd/: spec.md
specs/007-plugin-enhancements/: implementation_plan.md  research.md  spec.md  tasks.md
