[package]
name = "data-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
pingora = { version = "0.5.0", features = ["proxy"] }
prost = "0.13.3"
prost-types = "0.13.3"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost", "transport"] }
