[package]
name = "data-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.89"
env_logger = "0.11.8"
pingora = { version = "0.5.0", features = ["proxy", "openssl"] }
prost = "0.13.3"
prost-types = "0.13.3"
redis = { version = "1.0.2", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "mysql"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.12.3"
wasmtime = { version = "18.0.0", features = ["component-model"] }

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost", "transport"] }
