[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["full", "signal"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
ebpf-agent-common = { path = "../common", features = ["user"] }

[[bin]]
name = "ebpf-agent"
path = "src/main.rs"
